# swingmusic-extended-desktop

./: .gitignore  CI-README.md  COMMIT_GUIDELINES.md  Cargo.toml  DESKTOP_APP_STATUS.md  README.md  build-all.sh  build.sh  entitlements.plist  package-lock.json  package.json  setup.sh  src-tauri.json  tauri.conf.json
.github/workflows/: build.yml  desktop-ci.yml  desktop-release.yml  get-version.yml  quality.yml
desktop-components/: DesktopApp.vue  DesktopDownloadsView.vue  EnhancedDownloadsView.vue  SettingsView.vue  WebAppConnectionModal.vue
desktop-components/styles/: design-tokens-fixed.css  design-tokens.css  desktop-app.css  swingmusic-theme.css
src/: global_hotkeys.rs  linux_integration.rs  macos_integration.rs  main.rs  native_features.rs  windows_integration.rs
