[package]
name = "swingmusic-desktop"
version = "1.0.0"
description = "SwingMusic Desktop App - Next-generation music platform"
authors = ["SwingMusic Team"]
license = "AGPL-3.0"
repository = "https://github.com/swingmx/swingmusic"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [], default-features = false }
tauri-plugin-notification = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }

[target.'cfg(target_os = "windows")'.dependencies]
tauri = { version = "2.0", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
